--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     tools:context="com.example.sasiporn.myapplication.MainActivity">
 
+    <!--WallPaper-->
+    <ImageView
+        android:scaleType="centerCrop"
+        android:src="@drawable/bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <!--<ontent Fragment-->
     <FrameLayout
         android:id="@+id/contentFragmentMain"
