--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -26,9 +26,101 @@
 
     <!--Content-->
     <LinearLayout
+        android:background="#b4ffffff"
+        android:padding="@dimen/margin"
+        android:layout_margin="@dimen/margin"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></LinearLayout>
+        android:layout_height="wrap_content">
+
+        <!--Name-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--ICon-->
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_action_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--Text Name-->
+            <EditText
+                android:inputType="text"
+                android:hint="@string/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <!--Category-->
+        <RadioGroup
+            android:padding="16dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--Buyer-->
+            <RadioButton
+                android:text="Buyer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <!--Saleser-->
+            <RadioButton
+                android:text="Saleser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RadioGroup>
+
+        <!--User-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--ICon-->
+            <ImageView
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_action_user"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+            <!--Text Name-->
+            <EditText
+            android:inputType="text"
+            android:hint="@string/user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        </LinearLayout>
+
+
+        <!--Password-->
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <!--ICon-->
+            <ImageView
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/ic_action_password"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+            <!--Text Name-->
+            <EditText
+            android:inputType="text"
+            android:hint="@string/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 
