--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -48,6 +48,7 @@
 
             <!--Text Name-->
             <EditText
+                android:id="@+id/edtName"
                 android:inputType="text"
                 android:hint="@string/name"
                 android:layout_width="match_parent"
@@ -57,6 +58,7 @@
 
         <!--Category-->
         <RadioGroup
+            android:id="@+id/ragCategory"
             android:padding="16dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -64,12 +66,14 @@
 
             <!--Buyer-->
             <RadioButton
+                android:id="@+id/radBuyer"
                 android:text="Buyer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <!--Saleser-->
             <RadioButton
+                android:id="@+id/radSaler"
                 android:text="Saleser"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -91,6 +95,7 @@
 
             <!--Text Name-->
             <EditText
+            android:id="@+id/edtUser"
             android:inputType="text"
             android:hint="@string/user"
             android:layout_width="match_parent"
@@ -113,6 +118,7 @@
 
             <!--Text Name-->
             <EditText
+            android:id="@+id/edtPassword"
             android:inputType="text"
             android:hint="@string/password"
             android:layout_width="match_parent"
