--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--<ontent Fragment-->
+    <!--<content Fragment-->
     <FrameLayout
         android:id="@+id/contentFragmentMain"
         android:layout_width="match_parent"
