crate listview success

--- a/app/src/main/res/layout/fragment_service.xml
+++ b/app/src/main/res/layout/fragment_service.xml
@@ -14,7 +14,7 @@
 
     <!--Content ListView-->
     <ListView
-        android:id="@id/toolbarService"
+        android:id="@+id/livUser"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
